# olist-loafer

./: .gitignore  .pre-commit-config.yaml  CHANGES.rst  Makefile  README.md  README.rst  circle.yml  hatch.toml  pyproject.toml  ruff_defaults.toml  setup.py
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  tests.yml
docs/source/: conf.py  error_handlers.rst  exceptions.rst  faq.rst  generic_handlers.rst  managers.rst  message_translators.rst  providers.rst  routes.rst  tutorial.rst
loafer/: __init__.py  dispatcher.py  dispatchers.py  exceptions.py  manager.py  managers.py  message_translators.py  providers.py  route.py  routes.py  runners.py  utils.py
loafer/ext/: __init__.py
loafer/ext/apache/: providers.py  rebalance_listener.py  routes.py
loafer/ext/aws/: __init__.py  bases.py  handlers.py  message_translators.py  providers.py
loafer/ext/kafka/: bases.py  message_translators.py  providers.py  routes.py
requirements/: local.txt
src/loafer/: __init__.py  _compat.py  compat.py  dispatchers.py  exceptions.py  managers.py  message_translators.py  providers.py  routes.py  runners.py  types.py  utils.py
src/loafer/contrib/aws/: handlers.py  message_translators.py  providers.py
src/loafer/ext/: sentry.py
src/loafer/ext/aws/: bases.py  handlers.py  message_translators.py  providers.py  routes.py
tests/: conftest.py  test_dispatcher.py  test_dispatchers.py  test_managers.py  test_message_translator.py  test_route.py  test_routes.py  test_runners.py  test_utils.py
tests/contrib/: test_sentry.py
tests/contrib/aws/: conftest.py  test_bases.py  test_handlers.py  test_message_translators.py  test_providers.py  test_routes.py
tests/ext/: test_sentry.py
tests/ext/aws/: conftest.py  test_bases.py  test_handlers.py  test_message_translators.py  test_providers.py  test_routes.py
