[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "olist-loafer"
dynamic = ["version"]
description = "Asynchronous message dispatcher for concurrent tasks processing"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Olist", email = "developers@olist.com" }]
keywords = ["asyncio", "message", "dispatcher", "tasks", "microservices"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.9"
dependencies = [
  "aiobotocore>=2.0.0,<3.0.0",
  "taskgroup ; python_version < '3.11'",
]

[project.urls]
Download = "https://github.com/olist/olist-loafer/releases"
Repository = "https://github.com/olist/olist-loafer/"

[tool.hatch.build.targets.sdist]
exclude = ["/.devcontainer", "/.github", "/docs"]

[tool.hatch.build.targets.wheel]
packages = ["src/loafer"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "pytest-asyncio",
  "pytest-deadfixtures",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11", "3.12", "3.13"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/loafer tests}"

[tool.hatch.envs.hatch-static-analysis]
config-path = "ruff_defaults.toml"
dependencies = ["ruff==0.6.9"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"

[tool.ruff]
extend = "ruff_defaults.toml"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"
